TDP-452:  fix edition cell on IE

--- a/dataprep-webapp/src/components/datagrid/_datagrid.scss
+++ b/dataprep-webapp/src/components/datagrid/_datagrid.scss
@@ -202,7 +202,7 @@ $datagrid-cell-font-size: .80em;
 
       textarea {
         height: auto !important;
-        padding: 0 0 0 2px;
+        padding: 5px 0 5px 2px;
         margin: 0;
         min-width: 280px;
 
